# eip712

./: Cargo.toml  README.md
eip712-cli/: Cargo.toml
eip712-sol/: Cargo.toml
eip712-spec/: Cargo.toml  domain.rs  lib.rs  s.rs
src/: domain.rs  lib.rs  s.rs
