[package]
name = "eip712-sol"
version = "0.1.0"
authors = ["Paul Vidal <u1d4lp@gmail.com>"]
edition = "2021"
repository = "https://github.com/vidalpaul/eip712/src/sol"
description = "EIP712 implementation"

[dependencies]
parity-crypto = { version = "0.9.0", default-features = false, features = ["publickey"] }
primitive-types = "0.10.0"
serde = { version = "1.0.130", features = ["derive", "alloc"] }
serde_json = "1.0.70"
hex = "0.4.3"